[gd_scene load_steps=12 format=3 uid="uid://cuimor10lbcs5"]

[ext_resource type="Script" uid="uid://bqgpy3k4esmjb" path="res://main_menu.gd" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://q2wwlu38ibeq" path="res://assets/Button.png" id="2_7vrkn"]
[ext_resource type="Texture2D" uid="uid://dqj552qeum1aq" path="res://assets/Button02.png" id="2_fu7sn"]
[ext_resource type="Texture2D" uid="uid://dxcpcv3eiuh64" path="res://assets/MainMenu_02.png" id="2_glbon"]
[ext_resource type="FontVariation" uid="uid://bx2vorhu8ohwn" path="res://MainFont.tres" id="2_jix8l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("2_fu7sn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nlkkf"]
texture = ExtResource("2_fu7sn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("2_7vrkn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glbon"]
texture = ExtResource("2_fu7sn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qe12f"]
texture = ExtResource("2_fu7sn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fu7sn"]
texture = ExtResource("2_7vrkn")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="Back" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_glbon")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = -60.0
offset_right = 475.0
offset_bottom = 240.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_jix8l")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxTexture_jix8l")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nlkkf")
theme_override_styles/normal = SubResource("StyleBoxTexture_7vrkn")
text = "Start"

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="HelpButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_jix8l")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxTexture_jix8l")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nlkkf")
theme_override_styles/normal = SubResource("StyleBoxTexture_7vrkn")
text = "Help
"

[node name="Control2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_jix8l")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxTexture_glbon")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qe12f")
theme_override_styles/normal = SubResource("StyleBoxTexture_fu7sn")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
